Review Request 4922 -several ticket fixes -sidebar Badge now vertically aligns in FireFox -added stupid animation for enrichment stuff [wip] -disabled Import JSON option from Create Model

--- a/le-ui/projects/common/assets/sass/_navigation.scss
+++ b/le-ui/projects/common/assets/sass/_navigation.scss
@@ -325,6 +325,11 @@ html.no-cssmask {
             -moz-transition: none;
             -ms-transition: none;
             transition: none;
+
+            .badge {
+                position: absolute;
+                right: 0.5em;
+            }
         }
         .open-button {
             .ico-arrow-open {
