--- a/le-ui/projects/leadprioritization/app/enrichment/views/EnrichmentView.scss
+++ b/le-ui/projects/leadprioritization/app/enrichment/views/EnrichmentView.scss
@@ -19,6 +19,9 @@
 }
 
 .enrichment-container {
+    perspective-origin: 50% 50%;
+    min-height: 2155px;
+    
     section {
         margin-top: 2em;
     }
@@ -115,6 +118,44 @@
         min-height: 77px;
         padding-left: 90px;
         padding-right: 170px;
+
+        -webkit-backface-visibility: hidden;
+        -moz-backface-visibility: hidden;
+        -ms-backface-visibility: hidden;
+        backface-visibility: hidden;
+        transform-origin: 50% 50%;
+        
+        &.ng-animate,
+        &.ng-animate * {
+            transition: all 150ms ease;
+        }
+
+        &.ng-enter-stagger {
+          transition-delay: 50ms;
+          animation-delay: 50ms;
+        }
+
+        &.ng-enter  {
+            transform: scaleY(0);
+            position: absolute;
+            top: 0;
+        }
+
+        &.ng-enter-active {
+            transform: scaleY(100%);
+            position: absolute;
+            top: 0;
+        }
+
+        &.ng-leave  {
+            transform: scaleY(100%);
+        }
+
+        &.ng-leave-active {
+            transform: scaleY(0);
+        }
+
+
         & > .ico-container {
             position: absolute;
             top: 50%;
